--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ coloredlogs==15.0.1
 dataclasses-json==0.6.7
 Deprecated==1.2.14
 distro==1.9.0
+faiss-cpu==1.8.0.post1
 fastapi==0.112.0
 filelock==3.15.4
 flatbuffers==24.3.25
@@ -44,6 +45,7 @@ idna==3.7
 importlib_metadata==8.0.0
 importlib_resources==6.4.0
 Jinja2==3.1.4
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -65,6 +67,7 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
+networkx==3.3
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.18.1
@@ -100,11 +103,16 @@ python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 referencing==0.35.1
+regex==2024.7.24
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.19.1
 rsa==4.9
+safetensors==0.4.3
+scikit-learn==1.5.1
+scipy==1.14.0
+sentence-transformers==3.0.1
 setuptools==72.1.0
 shellingham==1.5.4
 six==1.16.0
@@ -115,11 +123,14 @@ starlette==0.37.2
 streamlit==1.37.0
 sympy==1.13.1
 tenacity==8.5.0
+threadpoolctl==3.5.0
 tokenizers==0.19.1
 toml==0.10.2
 toolz==0.12.1
+torch==2.4.0
 tornado==6.4.1
 tqdm==4.66.5
+transformers==4.43.3
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
