--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ langchain-chroma==0.1.2
 langchain-community==0.2.11
 langchain-core==0.2.28
 langchain-groq==0.1.9
+langchain-huggingface==0.0.3
 langchain-text-splitters==0.2.2
 langsmith==0.1.96
 markdown-it-py==3.0.0
@@ -92,9 +93,11 @@ pyarrow==17.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pydantic==2.8.2
+pydantic-settings==2.4.0
 pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
+PyPDF2==3.0.1
 PyPika==0.48.9
 pyproject_hooks==1.1.0
 pyreadline3==3.4.1
